--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.ipynb
@@ -106,7 +106,7 @@
     "alpha = gri.register_gridfunctions(\"AUXEVOL\",\"alpha\")\n",
     "\n",
     "# There are several initial data routines we need to test. We'll control which one we use with a string option\n",
-    "initial_data = \"AlfvenWave\" # Valid options: \"ExactWald\", \"AlignedRotator\", \"AlfvenWave\"\n"
+    "initial_data = \"FastWave\" # Valid options: \"ExactWald\", \"AlignedRotator\", \"AlfvenWave\", \"FastWave\"\n"
    ]
   },
   {
@@ -204,6 +204,10 @@
     "    import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests as gid\n",
     "    gid.GiRaFFEfood_NRPy_1D_tests()\n",
     "    desc = \"Generate Alfven wave 1D initial test data for GiRaFFEfood_NRPy.\"\n",
+    "if initial_data==\"FastWave\":\n",
+    "    import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_1D_tests_fast_wave as gid\n",
+    "    gid.GiRaFFEfood_NRPy_1D_tests_fast_wave()\n",
+    "    desc = \"Generate fast wave 1D initial test data for GiRaFFEfood_NRPy.\"\n",
     "elif initial_data==\"AlignedRotator\":\n",
     "    import GiRaFFEfood_NRPy.GiRaFFEfood_NRPy_Aligned_Rotator as gid\n",
     "    gid.GiRaFFEfood_NRPy_Aligned_Rotator()\n",
@@ -214,7 +218,7 @@
     "    gid.GiRaFFEfood_NRPy_Exact_Wald(gammaDD,M,r0)\n",
     "    desc = \"Generate exact Wald initial test data for GiRaFFEfood_NRPy.\"\n",
     "else:\n",
-    "    print(\"Unsupported Initial Data string \"+initial_data+\"! Supported ID: AlfvenWave, AlignedRotator, or ExactWald\")\n",
+    "    print(\"Unsupported Initial Data string \"+initial_data+\"! Supported ID: AlfvenWave, FastWave, AlignedRotator, or ExactWald\")\n",
     "\n",
     "name = \"GiRaFFE_NRPy_initial_data\"\n",
     "\n",
@@ -258,11 +262,13 @@
     "\n",
     "original_file_url  = [\\\n",
     "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/AlfvenWave.cc\",\\\n",
+    "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/FastWave.cc\",\\\n",
     "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/AlignedRotator.cc\",\\\n",
     "                      \"https://bitbucket.org/zach_etienne/wvuthorns/raw/231af720ccf3f1af50f7cce4a86b410fc8ea2e51/GiRaFFEfood/src/ExactWald.cc\",\\\n",
     "                     ]\n",
     "original_file_name = [\\\n",
     "                      \"AlfvenWave.cc\",\\\n",
+    "                      \"FastWave.cc\",\\\n",
     "                      \"AlignedRotator.cc\",\\\n",
     "                      \"ExactWald.cc\",\\\n",
     "                     ]\n",
@@ -417,7 +423,7 @@
     "#include \"stdio.h\"\n",
     "#include \"stdlib.h\"\n",
     "#include \"math.h\"\n",
-    "#include \"string.h\" // Needed for strncmp, etc.\n",
+    "#include <string> // Needed for strncmp, etc.\n",
     "#include \"stdint.h\" // Needed for Windows GCC 6.x compatibility\n",
     "#include <time.h>   // Needed to set a random seed.\n",
     "\n",
@@ -529,6 +535,7 @@
     "#define CCTK_VWarn(b01,b02,b03,b04,b05,b06,b07,b08,b09,b10,b11,b12,b13,b14,b15,b16,b17,b18,b19,b20,b21,b22,b23,b24,b25) //\n",
     "\n",
     "#include \"AlfvenWave.cc\"\n",
+    "#include \"FastWave.cc\"\n",
     "#include \"AlignedRotator.cc\"\n",
     "#include \"ExactWald.cc\"\n",
     "\n",
@@ -581,6 +588,7 @@
     "    if(atoi(argv[1])==0) GiRaFFEfood_AlfvenWave();\n",
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
+    "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
     "    \n",
     "    int all_agree = 1;\n",
     "    \n",
@@ -607,6 +615,11 @@
     "            }\n",
     "        }\n",
     "    }\n",
+    "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++) {\n",
+    "        int i1=Nxx_plus_2NGHOSTS1/2;\n",
+    "        int i2=Nxx_plus_2NGHOSTS2/2;\n",
+    "        printf(\"Old GiRaFFE vx = %.15e\\n\",vel[CCTK_GFINDEX4D(cctkGH,i0,i1,i2,0)]);\n",
+    "    }\n",
     "    \n",
     "    // Shift the grid to compare A_x\n",
     "    for(int j=0;j<Nxx_plus_2NGHOSTS1;j++) xx[1][j] += 0.5*dxx1;\n",
@@ -615,6 +628,7 @@
     "    if(atoi(argv[1])==0) GiRaFFEfood_AlfvenWave();\n",
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
+    "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
     "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++){\n",
     "        for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++){\n",
     "            for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++){\n",
@@ -634,6 +648,7 @@
     "    if(atoi(argv[1])==0) GiRaFFEfood_AlfvenWave();\n",
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
+    "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
     "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++){\n",
     "        for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++){\n",
     "            for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++){\n",
@@ -653,6 +668,7 @@
     "    if(atoi(argv[1])==0) GiRaFFEfood_AlfvenWave();\n",
     "    else if(atoi(argv[1])==1) GiRaFFEfood_AlignedRotator();\n",
     "    else if(atoi(argv[1])==2) {Shifted_Kerr_Schild_initial_metric(&params,xx,auxevol_gfs);GiRaFFEfood_ExactWald();}\n",
+    "    else if(atoi(argv[1])==3) GiRaFFEfood_FastWave();\n",
     "    for(int i0=0;i0<Nxx_plus_2NGHOSTS0;i0++){\n",
     "        for(int i1=0;i1<Nxx_plus_2NGHOSTS1;i1++){\n",
     "            for(int i2=0;i2<Nxx_plus_2NGHOSTS2;i2++){\n",
@@ -698,13 +714,14 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 1.4102628231048584 seconds.\n",
+      "Finished in 2.204007148742676 seconds.\n",
       "\n",
       "\n",
       "Now running...\n",
       "\n",
-      "All quantities agree at all points!\n",
-      "Finished in 0.1677565574645996 seconds.\n",
+      "(EXEC): Executing `cmd /c GiRaFFEfood_NRPy_unit_test 3`...\n",
+      "(BENCH): Finished executing in 0.32000041007995605 seconds.\n",
+      "Finished in 0.4400007724761963 seconds.\n",
       "\n",
       "\n"
      ]
@@ -716,21 +733,25 @@
     "print(\"Now compiling, should take ~2 seconds...\\n\")\n",
     "start = time.time()\n",
     "# cmd.C_compile(os.path.join(out_dir,\"GiRaFFEfood_NRPy_unit_test.C\"), os.path.join(out_dir,\"GiRaFFEfood_NRPy_unit_test\"))\n",
-    "!g++ -Ofast -fopenmp -march=native -funroll-loops Validation/GiRaFFEfood_NRPy_unit_test.C -o Validation/GiRaFFEfood_NRPy_unit_test -lm\n",
+    "!g++ -Ofast -fopenmp -march=native -funroll-loops Validation/GiRaFFEfood_NRPy_unit_test.C -o Validation/GiRaFFEfood_NRPy_unit_test -lstdc++\n",
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
     "# os.chdir(out_dir)\n",
     "print(\"Now running...\\n\")\n",
+    "os.chdir(out_dir)\n",
     "start = time.time()\n",
     "# cmd.Execute(os.path.join(\"GiRaFFEfood_NRPy_unit_test\"))\n",
     "if initial_data==\"AlfvenWave\":\n",
-    "    !./Validation/GiRaFFEfood_NRPy_unit_test 0\n",
+    "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"0\",\"out_GiRaFFEfood_NRPy_test.txt\")\n",
     "elif initial_data==\"AlignedRotator\":\n",
-    "    !./Validation/GiRaFFEfood_NRPy_unit_test 1\n",
+    "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"1\",\"out_GiRaFFEfood_NRPy_test.txt\")\n",
     "elif initial_data==\"ExactWald\":\n",
-    "    !./Validation/GiRaFFEfood_NRPy_unit_test 2\n",
+    "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"2\",\"out_GiRaFFEfood_NRPy_test.txt\")\n",
+    "elif initial_data==\"FastWave\":\n",
+    "    cmd.Execute(\"GiRaFFEfood_NRPy_unit_test\",\"3\",\"out_GiRaFFEfood_NRPy_test.txt\")\n",
     "end = time.time()\n",
+    "os.chdir(os.path.join(\"../\"))\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "# os.chdir(os.path.join(\"../\"))\n"
    ]
@@ -757,15 +778,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
+      "Created Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.tex, and compiled LaTeX file to PDF file Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy.pdf\n"
      ]
     }
    ],
