--- a/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
@@ -97,29 +97,29 @@
     "if nrpy_dir_path not in sys.path:\n",
     "    sys.path.append(nrpy_dir_path)\n",
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
-    "from NRPyPN_shortcuts import *    # NRPyNR: shortcuts for e.g., vector operations\n",
+    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
+    "from NRPyPN_shortcuts import *   # NRPyNR: shortcuts for e.g., vector operations\n",
     "\n",
-    "def H_NS_up_to_2PN(m1,m2, pU, nU, q):\n",
+    "def f_H_Newt__H_NS_1PN__H_NS_2PN(m1,m2, pU, nU, q):\n",
     "    mu = m1*m2/(m1+m2)\n",
     "    PU = ixp.zerorank1()\n",
     "    for i in range(3):\n",
     "        PU[i] = pU[i]/mu\n",
     "    eta = m1*m2/(m1+m2)**2\n",
-    "    p_dot_p = dot(PU,PU)\n",
-    "    n_dot_p = dot(nU,PU)\n",
+    "    P_dot_P = dot(PU,PU)\n",
+    "    n_dot_P = dot(nU,PU)\n",
     "\n",
     "    # H_{\\rm Newt} = \\frac{p^i p^i}{2} - \\frac{1}{q}\n",
-    "    H_Newt = mu*(div(1,2)*p_dot_p - 1/q)\n",
-    "    H_1PN  = mu*(div(1,8)*(3*eta-1)*p_dot_p**2 - \\\n",
-    "                 div(1,2)*((3+eta)*p_dot_p + eta*n_dot_p**2)/q + 1/(2*q**2))\n",
-    "    H_2PN  = mu*(div(1,16)*(1 - 5*eta + 5*eta**2)*p_dot_p**3 +\n",
-    "                 div(1,8)*((5 - 20*eta - 3*eta**2)*p_dot_p**2 \n",
-    "                           - 2*eta**2*n_dot_p**2*p_dot_p - 3*eta**2*n_dot_p**4)/q +\n",
-    "                 div(1,2)*((5 + 8*eta)*p_dot_p + 3*eta*n_dot_p**2)/q**2 -\n",
-    "                 div(1,4)*(1 + 3*eta)/q**3)\n",
-    "    return H_Newt + H_1PN + H_2PN"
+    "    global H_Newt,H_NS_1PN,H_NS_2PN\n",
+    "    H_Newt    = mu*(div(1,2)*P_dot_P - 1/q)\n",
+    "    H_NS_1PN  = mu*(div(1,8)*(3*eta-1)*P_dot_P**2 - \\\n",
+    "                 div(1,2)*((3+eta)*P_dot_P + eta*n_dot_P**2)/q + 1/(2*q**2))\n",
+    "    H_NS_2PN  = mu*(div(1,16)*(1 - 5*eta + 5*eta**2)*P_dot_P**3 +\n",
+    "                 div(1,8)*((5 - 20*eta - 3*eta**2)*P_dot_P**2 \n",
+    "                           - 2*eta**2*n_dot_P**2*P_dot_P - 3*eta**2*n_dot_P**4)/q +\n",
+    "                 div(1,2)*((5 + 8*eta)*P_dot_P + 3*eta*n_dot_P**2)/q**2 -\n",
+    "                 div(1,4)*(1 + 3*eta)/q**3)"
    ]
   },
   {
@@ -162,26 +162,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def H_NS_3PN(m1,m2, pU, nU, q):\n",
+    "def f_H_NS_3PN(m1,m2, pU, nU, q):\n",
     "    mu = m1*m2/(m1+m2)\n",
     "    PU = ixp.zerorank1()\n",
     "    for i in range(3):\n",
     "        PU[i] = pU[i]/mu\n",
     "    eta = m1*m2/(m1+m2)**2\n",
-    "    p_dot_p = dot(PU,PU)\n",
-    "    n_dot_p = dot(nU,PU)\n",
+    "    P_dot_P = dot(PU,PU)\n",
+    "    n_dot_P = dot(nU,PU)\n",
     "\n",
+    "    global H_NS_3PN\n",
     "    # The following is simply by-hand search/replaced from the above LaTeX to minimize error\n",
-    "    return mu*( div(1,128)*(-5+35*eta-70*eta**2+35*eta**3)*p_dot_p**4 +\n",
-    "                div(1,16)* ( (-7+42*eta-53*eta**2-5*eta**3)*p_dot_p**3\n",
-    "                            +(2-3*eta)*eta**2*n_dot_p**2*p_dot_p**2 +\n",
-    "                            +3*(1-eta)*eta**2*n_dot_p**4*p_dot_p - 5*eta**3*n_dot_p**6 )/(q) +\n",
-    "       (  div(1,16)*(-27+136*eta+109*eta**2)*p_dot_p**2\n",
-    "        + div(1,16)*(17+30*eta)*eta*n_dot_p**2*p_dot_p + div(1,12)*(5+43*eta)*eta*n_dot_p**4)/(q**2) +\n",
-    "       ( ( -div(25,8) + (div(1,64)*sp.pi**2-div(335,48))*eta \n",
-    "        - div(23,8)*eta**2 )*p_dot_p\n",
-    "        + (-div(85,16)-div(3,64)*sp.pi**2-div(7,4)*eta)*eta*n_dot_p**2)/(q**3) +\n",
-    "       ( div(1,8) + (div(109,12)-div(21,32)*sp.pi**2)*eta)/(q**4) )"
+    "    H_NS_3PN = \\\n",
+    "    mu*( div(1,128)*(-5+35*eta-70*eta**2+35*eta**3)*P_dot_P**4 +\n",
+    "         div(1,16)* ( (-7+42*eta-53*eta**2-5*eta**3)*P_dot_P**3\n",
+    "                     +(2-3*eta)*eta**2*n_dot_P**2*P_dot_P**2 +\n",
+    "                     +3*(1-eta)*eta**2*n_dot_P**4*P_dot_P - 5*eta**3*n_dot_P**6 )/(q) +\n",
+    " (  div(1,16)*(-27+136*eta+109*eta**2)*P_dot_P**2\n",
+    " + div(1,16)*(17+30*eta)*eta*n_dot_P**2*P_dot_P + div(1,12)*(5+43*eta)*eta*n_dot_P**4)/(q**2) +\n",
+    " ( ( -div(25,8) + (div(1,64)*sp.pi**2-div(335,48))*eta \n",
+    " - div(23,8)*eta**2 )*P_dot_P\n",
+    " + (-div(85,16)-div(3,64)*sp.pi**2-div(7,4)*eta)*eta*n_dot_P**2)/(q**3) +\n",
+    " ( div(1,8) + (div(109,12)-div(21,32)*sp.pi**2)*eta)/(q**4) )"
    ]
   },
   {
@@ -190,25 +192,43 @@
    "source": [
     "<a id='validation'></a>\n",
     "\n",
-    "# Part 3: Validation against corresponding Python module\n",
-    "$$\\label{threepn}$$ \n",
+    "# Part 3: Validation against corresponding Python module \\[Back to [top](#toc)\\]\n",
+    "$$\\label{validation}$$ \n",
     "\n",
-    "Here we validate the output from this notebook"
+    "As a code validation check, we verify agreement between the SymPy expressions generated in this notebook, and the corresponding Python module."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALL TESTS PASS\n"
+     ]
+    }
+   ],
    "source": [
+    "from outputC          import *   # NRPy+: Core C code output module\n",
     "\n",
+    "f_H_Newt__H_NS_1PN__H_NS_2PN(m1,m2, pU, nU, q)\n",
+    "f_H_NS_3PN(m1,m2, pU, nU, q)\n",
     "\n",
-    "# # Helpful for validation:\n",
-    "# #print(sp.latex(H_NS_3PN(q,pU,eta,nU)))\n",
-    "# H_NS = H_NS_up_to_2PN(m1,m2, pU, nU, q) + H_NS_3PN(m1,m2, pU, nU, q)\n",
-    "# # print(simp(H_NS_up_to_2PN(m1,m2, pU, nU, q)))\n",
-    "# # outputC(H_NS, \"H_NS\")"
+    "import PN_Hamiltonian_NS as HNS\n",
+    "HNS.f_H_Newt__H_NS_1PN__H_NS_2PN(m1,m2, pU, nU, q)\n",
+    "HNS.f_H_NS_3PN(m1,m2, pU, nU, q)\n",
+    "\n",
+    "def error(varname):\n",
+    "    print(\"ERROR: When comparing Python module & notebook, \"+varname+\" was found not to match.\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "if sp.simplify(H_Newt   - HNS.H_Newt)   != 0: error(\"H_Newt\")\n",
+    "if sp.simplify(H_NS_1PN - HNS.H_NS_1PN) != 0: error(\"H_NS_1PN\")\n",
+    "if sp.simplify(H_NS_2PN - HNS.H_NS_2PN) != 0: error(\"H_NS_2PN\")\n",
+    "print(\"ALL TESTS PASS\")"
    ]
   },
   {
@@ -221,7 +241,7 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-Loop_Generation_Cache_Blocking.pdf](Tutorial-Loop_Generation_Cache_Blocking.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[PN-Hamiltonian-Nonspinning.pdf](PN-Hamiltonian-Nonspinning.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
@@ -233,14 +253,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] WARNING | pattern 'Tutorial-Loop_Generation_Cache_Blocking.ipynb' matched no files\n",
-      "Created Tutorial-Loop_Generation_Cache_Blocking.tex, and compiled LaTeX file to PDF file Tutorial-Loop_Generation_Cache_Blocking.pdf\n"
+      "Created PN-Hamiltonian-Nonspinning.tex, and compiled LaTeX file to PDF file PN-Hamiltonian-Nonspinning.pdf\n"
      ]
     }
    ],
    "source": [
+    "import os,sys                    # Standard Python modules for multiplatform OS-level functions\n",
+    "nrpy_dir_path = os.path.join(\"..\")\n",
+    "if nrpy_dir_path not in sys.path:\n",
+    "    sys.path.append(nrpy_dir_path)\n",
     "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-Loop_Generation_Cache_Blocking\")"
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"PN-Hamiltonian-Nonspinning\",location_of_template_file=os.path.join(\"..\"))"
    ]
   }
  ],
