--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -51,9 +51,10 @@
     "+ [$H_{\\rm Orb, NS}$](PN-Hamiltonian-Nonspinning.ipynb), as summarized in [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) (see references therein for sources)\n",
     "\n",
     "#### $H_{\\rm SO}$, up to and including 3.5 post-Newtonian order (3.5PN)\n",
-    "+ [$H_{\\rm SO, 1.5PN}$](PN-Hamiltonian-Spin-Orbit-1p5PN.ipynb), as summarized in [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) (see references therein for sources)\n",
-    "+ [$H_{\\rm SO, 2.5PN}$](PN-Hamiltonian-Spin-Orbit-2p5PN.ipynb), as derived in [Damour, Jaranowski, and Sch&#228;fer (2008)](https://arxiv.org/abs/0711.1048)\n",
-    "+ [$H_{\\rm SO, 3.5PN}$](PN-Hamiltonian-Spin-Orbit-3p5PN.ipynb), as derived in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079)\n",
+    "+ [The $H_{\\rm SO}$ notebook](PN-Hamiltonian-Spin-Orbit.ipynb) contains all spin-orbit coupling terms up to and including 3.5PN order\n",
+    "    * 1.5PN order (i.e., $H_{\\rm SO, 1.5PN}$), as summarized in [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) (see references therein for sources)\n",
+    "    * 2.5PN order (i.e., $H_{\\rm SO, 2.5PN}$), as derived in [Damour, Jaranowski, and Sch&#228;fer (2008)](https://arxiv.org/abs/0711.1048)\n",
+    "    * 3.5PN order (i.e., $H_{\\rm SO, 3.5PN}$), as derived in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079)\n",
     "\n",
     "#### $H_{\\rm SS}$, up to and including third post-Newtonian order (3PN)\n",
     "+ [$H_{SS,{\\rm complete 2PN}}$](PN-Hamiltonian-Spin-Spin-2PN.ipynb), as summarized in [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) (see references therein for sources)\n",
