--- a/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
@@ -97,6 +97,9 @@
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from NRPyPN_shortcuts import *   # NRPyNR: shortcuts for e.g., vector operations\n",
     "\n",
+    "# 1.5PN spin-orbit coupling term, from Eq. 4.11a of \n",
+    "#    Damour, Jaranowski, and Schäfer (2008)\n",
+    "#      https://arxiv.org/abs/0711.1048\n",
     "def f_H_SO_1p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, r12):\n",
     "    def f_Omega_SO_1p5PN(m1,m2, n12U, p1U,p2U, r12):\n",
     "        Omega1U = ixp.zerorank1()\n",
@@ -143,6 +146,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 2.5PN spin-orbit coupling term, from Eq. 4.11b of \n",
+    "#    Damour, Jaranowski, and Schäfer (2008)\n",
+    "#      https://arxiv.org/abs/0711.1048\n",
     "def f_H_SO_2p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, r12):\n",
     "    def f_Omega_SO_2p5PN(m1,m2, n12U, p1U,p2U, r12):\n",
     "        Omega1 = ixp.zerorank1()\n",
@@ -176,7 +182,7 @@
     "# Part 2: $H_{\\rm SO, 3.5PN}$, as derived in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079) \\[Back to [top](#toc)\\]\n",
     "$$\\label{threept5pn}$$ \n",
     "\n",
-    "To reduce possibility of copying error, equations are taken directly from the LaTeX source code of Eq 4.11b in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079), and only mildly formatted to (1) improve presentation in Jupyter notebooks and (2) to ensure some degree of consistency in notation across different terms in other Hamiltonian notebooks:\n",
+    "To reduce possibility of copying error, equations are taken directly from the LaTeX source code of Eq 5 in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079), and only mildly formatted to (1) improve presentation in Jupyter notebooks and (2) to ensure some degree of consistency in notation across different terms in other Hamiltonian notebooks:\n",
     "\n",
     "\\begin{align}\n",
     " H^{\\text{NNLO}}_{\\text{SO}} & = \\frac{1}{r_{12}^2} \\biggl[\n",
@@ -307,6 +313,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 3.5PN spin-orbit coupling term, from Eq. 5 of \n",
+    "#    Hartung and Steinhoff (2011)\n",
+    "#   https://arxiv.org/abs/1104.3079\n",
+    "\n",
+    "# 3.5PN H_SO:  Omega_1, part 1:\n",
     "def HS2011_Omega_SO_3p5PN_pt1(m1,m2, n12U, p1U,p2U, q):\n",
     "    Omega1 = ixp.zerorank1()\n",
     "    for i in range(3):\n",
@@ -643,17 +654,19 @@
     "f_H_SO_2p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
     "f_H_SO_3p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
     "\n",
-    "# import PN_Hamiltonian_NS as HNS\n",
-    "# HNS.f_H_Newt__H_NS_1PN__H_NS_2PN(m1,m2, pU, nU, q)\n",
-    "# HNS.f_H_NS_3PN(m1,m2, pU, nU, q)\n",
+    "import PN_Hamiltonian_SO as HSO\n",
+    "HSO.f_H_SO_1p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
+    "HSO.f_H_SO_2p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
+    "HSO.f_H_SO_3p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
+    "\n",
     "\n",
     "def error(varname):\n",
     "    print(\"ERROR: When comparing Python module & notebook, \"+varname+\" was found not to match.\")\n",
     "    sys.exit(1)\n",
     "\n",
-    "# if sp.simplify(H_Newt   - HNS.H_Newt)   != 0: error(\"H_Newt\")\n",
-    "# if sp.simplify(H_NS_1PN - HNS.H_NS_1PN) != 0: error(\"H_NS_1PN\")\n",
-    "# if sp.simplify(H_NS_2PN - HNS.H_NS_2PN) != 0: error(\"H_NS_2PN\")\n",
+    "if sp.simplify(H_SO_1p5PN - H_SO_1p5PN)   != 0: error(\"H_SO_1p5PN\")\n",
+    "if sp.simplify(H_SO_2p5PN - H_SO_2p5PN)   != 0: error(\"H_SO_2p5PN\")\n",
+    "if sp.simplify(H_SO_3p5PN - H_SO_3p5PN)   != 0: error(\"H_SO_3p5PN\")\n",
     "print(\"ALL TESTS PASS\")"
    ]
   },
