--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -51,15 +51,16 @@
     "+ [$H_{\\rm Orb, NS}$](PN-Hamiltonian-Nonspinning.ipynb), as summarized in [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) (see references therein for sources)\n",
     "\n",
     "#### $H_{\\rm SO}$, up to and including 3.5 post-Newtonian order (3.5PN)\n",
-    "+ [The $H_{\\rm SO}$ notebook](PN-Hamiltonian-Spin-Orbit.ipynb) contains all spin-orbit coupling terms up to and including 3.5PN order\n",
+    "+ [The $H_{\\rm SO}$ notebook](PN-Hamiltonian-Spin-Orbit.ipynb) contains all spin-orbit coupling terms up to and including 3.5PN order:\n",
     "    * 1.5PN order (i.e., $H_{\\rm SO, 1.5PN}$), as summarized in [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) (see references therein for sources)\n",
     "    * 2.5PN order (i.e., $H_{\\rm SO, 2.5PN}$), as derived in [Damour, Jaranowski, and Sch&#228;fer (2008)](https://arxiv.org/abs/0711.1048)\n",
     "    * 3.5PN order (i.e., $H_{\\rm SO, 3.5PN}$), as derived in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079)\n",
     "\n",
     "#### $H_{\\rm SS}$, up to and including third post-Newtonian order (3PN)\n",
-    "+ [$H_{SS,{\\rm complete 2PN}}$](PN-Hamiltonian-Spin-Spin-2PN.ipynb), as summarized in [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) (see references therein for sources)\n",
-    "+ [$H_{S_1,S_2,{\\rm 3PN}}$](PN-Hamiltonian-S_1-S_2-3PN.ipynb), as derived in [Steinhoff, Hergt, and Sch&#228;fer (2008a)](https://arxiv.org/abs/0712.1716)\n",
-    "+ [$H_{S_1^2,{\\rm 3PN}}$](PN-Hamiltonian-S_1squared-3PN.ipynb), as derived in [Steinhoff, Hergt, and Sch&#228;fer (2008b)](https://arxiv.org/abs/0809.2200)\n",
+    "+ [The $H_{\\rm SS}$ notebook](PN-Hamiltonian-Spin-Spin.ipynb) contains all spin-orbit coupling terms up to and including 3PN order\n",
+    "    + 2PN order (i.e., $H_{S_1,S_2,{\\rm 2PN}}+H_{S_1^2,{\\rm 2PN}}+H_{S_2^2,{\\rm 2PN}}$), as summarized in [Buonanno, Chen, and Damour (2006)](https://arxiv.org/abs/gr-qc/0508067) (see references therein for sources)\n",
+    "    + $S_1,S_2$ term at 3PN order (i.e., $H_{S_1,S_2,{\\rm 3PN}}$), as derived in [Steinhoff, Hergt, and Sch&#228;fer (2008a)](https://arxiv.org/abs/0712.1716)\n",
+    "    + $S_1^2$ term at 3PN order (i.e., $H_{S_1^2,{\\rm 3PN}}$), as derived in [Steinhoff, Hergt, and Sch&#228;fer (2008b)](https://arxiv.org/abs/0809.2200)\n",
     "\n",
     "#### $H_{\\rm SSS}$, at 3.5 post-Newtonian order (3.5PN)\n",
     "+ [$H_{SSS,{\\rm 3PN}}$](PN-Hamiltonian-SSS-3p5PN.ipynb), as derived in [Levi and Steinhoff (2015)](https://arxiv.org/abs/1410.2601)\n",
