--- a/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
@@ -66,7 +66,7 @@
     "r_{12} = r_{21} &= |\\mathbf{r}_{12}|\\\\\n",
     "\\mathbf{n}_{12} &= \\frac{\\mathbf{r}_{12}}{r_{12}},\n",
     "\\end{align}\n",
-    "and when the numbers in subscripts are flipped, it implies \n",
+    "and when the numbers in subscripts are flipped, the particles are interchanged.\n",
     "\n",
     "The spin-orbit terms of the Hamiltonian up to and including 3.5 PN order are generally given by:\n",
     "$$\n",
@@ -122,7 +122,7 @@
     "# Part 2: $H_{\\rm SO, 2.5PN}$, as derived by [Damour, Jaranowski, and Sch&#228;fer (2008)](https://arxiv.org/abs/0711.1048) \\[Back to [top](#toc)\\]\n",
     "$$\\label{twopt5pn}$$ \n",
     "\n",
-    "To reduce possibility of copying error, equations are taken directly from the LaTeX source code of Eq 4.11b in [Damour, Jaranowski, and Sch&#228;fer (2008)](https://arxiv.org/abs/0711.1048), and only mildly formatted to (1) improve presentation in Jupyter notebooks and (2) to ensure some degree of consistency in notation across different terms in other Hamiltonian notebooks:\n",
+    "To reduce possibility of copying error, equations are taken directly from the arXiv LaTeX source code of Eq 4.11b in [Damour, Jaranowski, and Sch&#228;fer (2008)](https://arxiv.org/abs/0711.1048), and only mildly formatted to (1) improve presentation in Jupyter notebooks and (2) to ensure some degree of consistency in notation across different terms in other Hamiltonian notebooks:\n",
     "\n",
     "\\begin{align}\n",
     "\\mathbf{\\Omega}^{\\rm NLO}_{1} &= \\frac{G^2}{c^4r_{12}^3} \\Bigg(\n",
@@ -182,7 +182,7 @@
     "# Part 3: $H_{\\rm SO, 3.5PN}$, as derived in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079) \\[Back to [top](#toc)\\]\n",
     "$$\\label{threept5pn}$$ \n",
     "\n",
-    "To reduce possibility of copying error, equations are taken directly from the LaTeX source code of Eq 5 in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079), and only mildly formatted to (1) improve presentation in Jupyter notebooks and (2) to ensure some degree of consistency in notation across different terms in other Hamiltonian notebooks:\n",
+    "To reduce possibility of copying error, equations are taken directly from the arXiv LaTeX source code of Eq 5 in [Hartung and Steinhoff (2011)](https://arxiv.org/abs/1104.3079), and only mildly formatted to (1) improve presentation in Jupyter notebooks and (2) to ensure some degree of consistency in notation across different terms in other Hamiltonian notebooks:\n",
     "\n",
     "\\begin{align}\n",
     " H^{\\text{NNLO}}_{\\text{SO}} & = \\frac{1}{r_{12}^2} \\biggl[\n",
