--- a/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
@@ -26,7 +26,7 @@
     "### This notebook exists as the following Python module:\n",
     "1. [PN_Hamiltonian_NS.py](../../edit/NRPyPN/PN_Hamiltonian_NS.py)\n",
     "\n",
-    "### This notebook & corresponding Python module depend on the following NRPy+/NRPyNR Python modules:\n",
+    "### This notebook & corresponding Python module depend on the following NRPy+/NRPyPN Python modules:\n",
     "1. [outputC.py](../../edit/outputC.py): [**documentation+tutorial**](../Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "1. [indexedexp.py](../../edit/indexedexp.py): [**documentation+tutorial**](../Tutorial-Indexed_Expressions.ipynb)\n",
     "1. [NRPyPN_shortcuts.py](../../edit/NRPyPN/NRPyPN_shortcuts.py): [**documentation**](NRPyPN_shortcuts.ipynb)"
@@ -99,7 +99,7 @@
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "from NRPyPN_shortcuts import *   # NRPyNR: shortcuts for e.g., vector operations\n",
+    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "def f_H_Newt__H_NS_1PN__H_NS_2PN(m1,m2, pU, nU, q):\n",
     "    mu = m1*m2/(m1+m2)\n",
