--- a/NRPyPN/PN-Hamiltonian-SSS.ipynb
+++ b/NRPyPN/PN-Hamiltonian-SSS.ipynb
@@ -26,7 +26,7 @@
     "### This notebook exists as the following Python module:\n",
     "1. [PN_Hamiltonian_SSS.py](../../edit/NRPyPN/PN_Hamiltonian_SSS.py)\n",
     "\n",
-    "### This notebook & corresponding Python module depend on the following NRPy+/NRPyNR Python modules:\n",
+    "### This notebook & corresponding Python module depend on the following NRPy+/NRPyPN Python modules:\n",
     "1. [outputC.py](../../edit/outputC.py): [**documentation+tutorial**](../Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "1. [indexedexp.py](../../edit/indexedexp.py): [**documentation+tutorial**](../Tutorial-Indexed_Expressions.ipynb)\n",
     "1. [NRPyPN_shortcuts.py](../../edit/NRPyPN/NRPyPN_shortcuts.py): [**documentation**](NRPyPN_shortcuts.ipynb)"
@@ -99,7 +99,7 @@
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "from NRPyPN_shortcuts import *   # NRPyNR: shortcuts for e.g., vector operations\n",
+    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "# Step 1: 3PN spin-spin-spin term, from Eq. 3.12 of\n",
     "#        Levi and Steinhoff (2015):\n",
