--- a/NRPyPN/PN-Hamiltonian-Spin-Spin.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Spin.ipynb
@@ -27,7 +27,7 @@
     "### This notebook exists as the following Python module:\n",
     "1. [PN_Hamiltonian_SS.py](../../edit/NRPyPN/PN_Hamiltonian_SS.py)\n",
     "\n",
-    "### This notebook & corresponding Python module depend on the following NRPy+/NRPyNR Python modules:\n",
+    "### This notebook & corresponding Python module depend on the following NRPy+/NRPyPN Python modules:\n",
     "1. [outputC.py](../../edit/outputC.py): [**documentation+tutorial**](../Tutorial-Coutput__Parameter_Interface.ipynb)\n",
     "1. [indexedexp.py](../../edit/indexedexp.py): [**documentation+tutorial**](../Tutorial-Indexed_Expressions.ipynb)\n",
     "1. [NRPyPN_shortcuts.py](../../edit/NRPyPN/NRPyPN_shortcuts.py): [**documentation**](NRPyPN_shortcuts.ipynb)"
@@ -91,7 +91,7 @@
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "from NRPyPN_shortcuts import *   # NRPyNR: shortcuts for e.g., vector operations\n",
+    "from NRPyPN_shortcuts import *   # NRPyPN: shortcuts for e.g., vector operations\n",
     "\n",
     "# 2PN spin-spin term, from Eqs. 2.18 and 2.19 of\n",
     "#      Buonanno, Chen, and Damour (2006):\n",
