--- a/NRPyPN/PN-dE_GW_dt_and_dM_dt.ipynb
+++ b/NRPyPN/PN-dE_GW_dt_and_dM_dt.ipynb
@@ -223,12 +223,14 @@
     "            sys.exit(1)\n",
     "\n",
     "        nu,delta,  l,chi_a,chi_s,  s_l,s_n,sigma_l,sigma_n = dE_GW_dt_OBKPSS2015_consts(m1,m2, n12U, S1U,S2U)\n",
-    "        # Compute Mdot:\n",
-    "        dM_dt = (-div(1,4)*(+(1-3*nu)*dot(chi_s,l)*(1+3*dot(chi_s,l)**2+9*dot(chi_a,l)**2)\n",
+    "        x = (mOmega)**div(2,3)\n",
+    "\n",
+    "        # Compute b_5_Mdot:\n",
+    "        b_5_Mdot = (-div(1,4)*(+(1-3*nu)*dot(chi_s,l)*(1+3*dot(chi_s,l)**2+9*dot(chi_a,l)**2)\n",
     "                            +(1-  nu)*delta*dot(chi_a,l)*(1+3*dot(chi_a,l)**2+9*dot(chi_s,l)**2)))\n",
     "        if which_quantity == \"dM_dt\":\n",
-    "            return dM_dt\n",
-    "        x = (mOmega)**div(2,3)\n",
+    "            return div(32,5)*nu**2*x**5*b_5_Mdot*x**div(5,2)\n",
+    "\n",
     "        b = ixp.zerorank1(DIM=10)\n",
     "        b[2] = -div(1247,336) - div(35,12)*nu\n",
     "        b[3] = +4*sp.pi - 4*s_l - div(5,4)*delta*sigma_l\n",
@@ -241,7 +243,7 @@
     "        b[5] =(-div(8191,672)*sp.pi - div(9,2)*s_l - div(13,16)*delta*sigma_l\n",
     "               +nu*(-div(583,24)*sp.pi + div(272,9)*s_l + div(43,4)*delta*sigma_l))\n",
     "        if which_quantity == \"dE_GW_dt_plus_dM_dt\":\n",
-    "            b[5]+= dM_dt\n",
+    "            b[5]+= b_5_Mdot\n",
     "        b[6] =(+div(6643739519,69854400) + div(16,3)*sp.pi**2 - div(1712,105)*gamma_EulerMascheroni \n",
     "               -div(856,105)*sp.log(16*x) + (-div(134543,7776) + div(41,48)*sp.pi**2)*nu\n",
     "               -div(94403,3024)*nu**2 - div(775,324)*nu**3 - 16*sp.pi*s_l - div(31,6)*sp.pi*delta*sigma_l)\n",
@@ -254,6 +256,7 @@
     "        for k in range(9):\n",
     "            b_sum += b[k]*x**div(k,2)\n",
     "        return div(32,5)*nu**2*x**5*b_sum\n",
+    "\n",
     "    global dE_GW_dt_plus_dM_dt, dE_GW_dt, dM_dt\n",
     "    dE_GW_dt_plus_dM_dt = \\\n",
     "               f_compute_quantities(mOmega, m1,m2, n12U, S1U,S2U, gamma_EulerMascheroni,\"dE_GW_dt_plus_dM_dt\")\n",
@@ -340,33 +343,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle 0$"
-      ],
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Omega = sp.symbols('Omega',real=True)\n",
-    "gamma_EulerMascheroni = sp.symbols('gam',real=True)\n",
-    "f_dE_GW_dt_plus_dM_dt_v2(Omega, m1,m2, n12U, S1U,S2U, gamma_EulerMascheroni)\n",
-    "f_dE_GW_dt_and_dM_dt(Omega, m1,m2, n12U, S1U,S2U, gamma_EulerMascheroni)\n",
-    "sp.simplify(dE_GW_dt_plus_dM_dt-dE_GW_dt_plus_dM_dtv2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -380,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -398,16 +374,27 @@
     "gamma_EulerMascheroni = sp.symbols('gam',real=True)\n",
     "f_dE_GW_dt_and_dM_dt(Omega, m1,m2, n12U, S1U,S2U, gamma_EulerMascheroni)\n",
     "\n",
-    "import PN_dE_GW_dt_and_dM_dt as dEdt\n",
-    "dEdt.f_dE_GW_dt_and_dM_dt(Omega, m1,m2, n12U, S1U,S2U, gamma_EulerMascheroni)\n",
-    "\n",
     "def error(varname):\n",
     "    print(\"ERROR: When comparing Python module & notebook, \"+varname+\" was found not to match.\")\n",
     "    sys.exit(1)\n",
     "\n",
+    "# Validation against second transcription of the expressions:\n",
+    "f_dE_GW_dt_plus_dM_dt_v2(Omega, m1,m2, n12U, S1U,S2U, gamma_EulerMascheroni)\n",
+    "f_dE_GW_dt_and_dM_dt(Omega, m1,m2, n12U, S1U,S2U, gamma_EulerMascheroni)\n",
+    "\n",
+    "if sp.simplify(dE_GW_dt_plus_dM_dt - dE_GW_dt_plus_dM_dtv2) != 0: error(\"dE_GW_dt_plus_dM_dtv2\")\n",
+    "\n",
+    "# Validation against corresponding Python module:\n",
+    "import PN_dE_GW_dt_and_dM_dt as dEdt\n",
+    "dEdt.f_dE_GW_dt_and_dM_dt(Omega, m1,m2, n12U, S1U,S2U, gamma_EulerMascheroni)\n",
+    "\n",
     "if sp.simplify(dE_GW_dt_plus_dM_dt - dEdt.dE_GW_dt_plus_dM_dt) != 0: error(\"dE_GW_dt_plus_dM_dt\")\n",
     "if sp.simplify(dE_GW_dt            - dEdt.dE_GW_dt)            != 0: error(\"dE_GW_dt\")\n",
     "if sp.simplify(dM_dt               - dEdt.dM_dt)               != 0: error(\"dM_dt\")\n",
+    "\n",
+    "# Finally, confirm that dE_GW_dt_plus_dM_dt = dE_GW_dt + dM_dt\n",
+    "if sp.simplify(dE_GW_dt_plus_dM_dt - (dE_GW_dt + dM_dt)) != 0: error(\"dE_GW_dt + dM_dt\")\n",
+    "\n",
     "print(\"ALL TESTS PASS\")"
    ]
   },
@@ -426,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
