--- a/Tutorial-SEOBNR_Documentation.ipynb
+++ b/Tutorial-SEOBNR_Documentation.ipynb
@@ -4428,6 +4428,7 @@
     "        print(\"No difference. TEST PASSED!\")\n",
     "    else:\n",
     "        print(\"ERROR: Disagreement found with the trusted file. See differences above.\")\n",
+    "        sys.exit(1)\n",
     "\n",
     "# Import the new Hamiltonian function and the trusted Hamiltonian function\n",
     "import SEOBNR.Hreal_trusted_computation as Hreal_trusted\n",
@@ -4480,21 +4481,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
